ci: reduce number of steps when nothing changed

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -21,6 +21,7 @@ jobs:
               - ".github/**"
               - "docs/**"
       - uses: actions/setup-node@1e60f620b9541d16bece96c5465dc8ee9832be0b # v4
+        if: steps.filter.outputs.src == 'true'
         with:
           node-version-file: "docs/.nvmrc"
           cache: "yarn"
