--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -22,6 +22,7 @@ jobs:
               - ".github/**"
               - "frontend/**"
       - uses: actions/setup-node@1e60f620b9541d16bece96c5465dc8ee9832be0b # v4
+        if: steps.filter.outputs.src == 'true'
         with:
           node-version-file: "frontend/.nvmrc"
           cache: "yarn"
