--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -22,6 +22,7 @@ jobs:
               - ".github/**"
               - "backend/**"
       - uses: actions/setup-java@2dfa2011c5b2a0f1489bf9e433881c92c1631f88 # v4
+        if: steps.filter.outputs.src == 'true'
         with:
           cache: maven
           distribution: temurin
