--- a/ansible/roles/update_script/tasks/main.yml
+++ b/ansible/roles/update_script/tasks/main.yml
@@ -7,12 +7,20 @@
       - actions
       - docker
 
-- name: Set authorized key taken from file
+- name: Set deploy authorized_key with forced command
   ansible.posix.authorized_key:
     user: actions
     state: present
     key: "{{ lookup('file', 'creds/{{ stack_name }}-deploy.pub') }}"
     key_options: 'command="{{ update_script_path }}"'
+  ignore_errors: true
+
+- name: Set rm-deploy authorized_key with forced command
+  ansible.posix.authorized_key:
+    user: actions
+    state: present
+    key: "{{ lookup('file', 'creds/rm-deploy.pub') }}"
+    key_options: 'command="{{ rm_script_path }}"'
   ignore_errors: true
 
 - name: Create directories
@@ -24,12 +32,22 @@
     group: "actions"
   with_items:
     - "{{ update_script_install_location }}"
+    - "{{ rm_script_install_location }}"
   become: true
 
 - name: Copy deploy script
   ansible.builtin.template:
     src: update.sh
     dest: "{{ update_script_path }}"
+    mode: "0755"
+    owner: "actions"
+    group: "actions"
+  become: true
+
+- name: Copy remove deploy script
+  ansible.builtin.template:
+    src: rm-deploy.sh
+    dest: "{{ rm_script_path }}"
     mode: "0755"
     owner: "actions"
     group: "actions"
