chore(ci): cleanup concurrency, timeout and SHA fetch

--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -1,9 +1,12 @@
 on:
   workflow_call:
 
+concurrency: dev-deploy
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     environment:
       name: development
       url: https://dev.reims2.app
