--- a/.github/workflows/ansible-deploy.yml
+++ b/.github/workflows/ansible-deploy.yml
@@ -3,15 +3,14 @@ name: Ansible Deploy
 on:
   workflow_dispatch:
 
+concurrency: prod-deploy
+
 jobs:
   ansible:
     runs-on: ubuntu-latest
     environment: production
-    concurrency: deploy
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
-        with:
-          fetch-depth: 0
       - name: Run playbook
         uses: dawidd6/action-ansible-playbook@c97d71562fcba83cc1ea0602d5a77013427f7571 # v2
         with:
