--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
 
   e2e:
     name: "Run E2E Tests"
-    if: github.event_name == 'workflow_dispatch' || github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main'
     needs:
       - docker
     uses: reims2/reims2/.github/workflows/e2e.yml@main
