--- a/e2e/package.json
+++ b/e2e/package.json
@@ -8,6 +8,7 @@
     "@playwright/test": "1.47.2",
     "@types/node": "22.7.0",
     "dotenv": "16.4.5",
-    "prettier": "3.3.3"
+    "prettier": "3.3.3",
+    "typescript": "5.6.2"
   }
 }
