--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-vue": "9.28.0",
     "happy-dom": "15.7.4",
     "prettier": "3.3.3",
+    "sass": "1.79.4",
     "sass-embedded": "1.79.4",
     "typescript": "5.6.2",
     "unplugin-auto-import": "0.18.3",
