--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -17,8 +17,6 @@ jobs:
 
   e2e:
     runs-on: ubuntu-latest
-    container:
-      image: mcr.microsoft.com/playwright:v1.47.2@sha256:f640d04686ef8fcca228955dc73f36b86ccd2228eda488fb2b32f3f037639f09
     needs: e2e-deploy
     defaults:
       run:
@@ -27,27 +25,26 @@ jobs:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
       - uses: actions/setup-node@0a44ba7841725637a19e28fa30b79a866c81b0a6 # v4
         with:
+          node-version-file: "e2e/.nvmrc"
           cache: "yarn"
           cache-dependency-path: "e2e/yarn.lock"
       - name: Install dependencies
-        run: yarn
-      - name: Update playwright browsers
-        # only update browsers on scheduled runs to save time
+        run: yarn install --immutable
+      - name: Install Playwright Browsers (chromium only)
+        if: github.event_name != 'schedule' && github.event_name != 'workflow_dispatch'
+        run: yarn playwright install --with-deps chromium
+      - name: Install Playwright Browsers (all)
         if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
-        run: yarn playwright install
-        env:
-          HOME: /root
+        run: yarn playwright install --with-deps
       - name: Run fast test suite
         if: github.event_name != 'schedule' && github.event_name != 'workflow_dispatch'
         run: yarn playwright test --project chromium --grep @fast
         env:
-          HOME: /root
           BASE_URL: "https://e2e.reims2.app"
       - name: Run all tests
         if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
         run: yarn playwright test
         env:
-          HOME: /root
           BASE_URL: "https://e2e.reims2.app"
       - uses: actions/upload-artifact@50769540e7f4bd5e21e526ee35c689e35e0d6874 # v4
         if: always()
