ci(e2e): don't run for PRs (for now)

--- a/.github/workflows/pr-e2e.yml
+++ b/.github/workflows/pr-e2e.yml
@@ -1,10 +1,10 @@
 name: PR E2E
 
 on:
-  pull_request:
-    paths:
-      - "e2e/**"
-      - "ansible/**"
+  # pull_request:
+  #   paths:
+  #     - "e2e/**"
+  #     - "ansible/**"
   workflow_dispatch:
 
 jobs:
