--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,13 @@
 FROM eclipse-temurin:21.0.5_11-jdk-jammy@sha256:4c19911e6c22732db123ffaf049d033b9fe487935cffe265d1517cd26dac7f11 AS build
 
-ENV PORT 5000
+ENV PORT=5000
 WORKDIR /usr/src/app
 COPY .mvn/ .mvn
 COPY mvnw pom.xml ./
-RUN --mount=type=cache,target=/root/.m2 ./mvnw dependency:go-offline
+RUN --mount=type=cache,target=/root/.m2 ./mvnw -Dmaven.repo.local=/root/.m2 dependency:go-offline
 
 COPY ./src ./src
-RUN --mount=type=cache,target=/root/.m2 ./mvnw clean install -DskipTests
+RUN --mount=type=cache,target=/root/.m2 ./mvnw -Dmaven.repo.local=/root/.m2 clean install -DskipTests
 
 WORKDIR /usr/src/app/target
 RUN java -Djarmode=layertools -jar ./*.jar extract
@@ -16,8 +16,8 @@ RUN java -Djarmode=layertools -jar ./*.jar extract
 FROM eclipse-temurin:21.0.5_11-jre-alpine@sha256:2a0bbb1db6d8db42c66ed00c43d954cf458066cc37be12b55144781da7864fdf
 RUN apk add dumb-init
 
-ENV HOST 0.0.0.0
-ENV PORT 5000
+ENV HOST=0.0.0.0
+ENV PORT=5000
 EXPOSE $PORT
 
 WORKDIR /usr/src/app
