--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -1,13 +1,13 @@
 ---
 roles:
-  - name: hifis.unattended_upgrades
-    version: v3.2.1
   - name: geerlingguy.swap
     version: 1.2.0
   - name: geerlingguy.docker
     version: 7.4.3
 
 collections:
+  - name: hifis.toolkit
+    version: 5.1.0
   - name: devsec.hardening
     version: 10.1.0
   - name: community.general
