--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "dev:remote": "VITE_API_URL=https://dev.reims2.app/ vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "lint": "eslint . --fix --ignore-path .gitignore",
+    "lint": "eslint . --fix",
     "test": "vitest run --coverage",
     "test:watch": "vitest --ui --coverage"
   },
@@ -33,38 +33,35 @@
   },
   "devDependencies": {
     "@babel/types": "7.27.0",
+    "@eslint/js": "9.23.0",
     "@mdi/js": "7.4.47",
     "@pinia/testing": "1.0.0",
     "@testing-library/vue": "8.1.0",
     "@types/eslint": "9.6.1",
     "@types/jest": "29.5.14",
     "@types/node": "22.13.13",
-    "@typescript-eslint/eslint-plugin": "8.28.0",
-    "@typescript-eslint/parser": "8.28.0",
     "@vitejs/plugin-vue": "5.2.3",
     "@vitest/coverage-v8": "3.0.7",
     "@vitest/ui": "3.0.7",
-    "@vue/eslint-config-typescript": "13.0.0",
     "browserslist": "4.24.4",
     "browserslist-to-esbuild": "2.1.1",
     "eslint": "9.23.0",
     "eslint-config-prettier": "10.1.1",
-    "eslint-config-standard": "17.1.0",
-    "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-n": "17.17.0",
-    "eslint-plugin-promise": "7.2.1",
     "eslint-plugin-vue": "10.0.0",
+    "globals": "16.0.0",
     "happy-dom": "17.4.4",
     "prettier": "3.5.2",
     "sass": "1.86.0",
     "sass-embedded": "1.86.0",
     "typescript": "5.8.2",
+    "typescript-eslint": "8.28.0",
     "unplugin-auto-import": "19.1.2",
     "vite": "6.2.3",
     "vite-plugin-pwa": "0.21.2",
     "vite-plugin-vue-devtools": "7.7.2",
     "vite-plugin-vuetify": "2.1.0",
     "vitest": "3.0.7",
+    "vue-eslint-parser": "10.1.1",
     "vue-tsc": "2.2.8",
     "workbox-window": "7.3.0"
   },
