chore(renovate): yarn dedupe

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -17,6 +17,7 @@
   "configMigration": true,
   "labels": ["dependencies"],
   "platformAutomerge": true,
+  "postUpdateOptions": ["yarnDedupeHighest"],
   "packageRules": [
     {
       "groupName": "all patch dependencies",
