feat(backend): Use flyway for DB schema management

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -5,8 +5,7 @@ spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
-# automatically generate schema, put update it only (don't drop data)
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 # reduce connection maximum lifetime to avoid closed connections on DB
 spring.datasource.hikari.max-lifetime=600000
 #----------------------------------------------------------------
