--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -17,6 +17,7 @@
 # ------------------------------------------------
 
 spring.profiles.active=hsqldb,spring-data-jpa
+spring.datasource.url=jdbc:hsqldb:mem:testdb;sql.syntax_mys=true
 
 # ------------------------------------------------
 
