--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,6 +13,8 @@ logging.level.org.springframework=INFO
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
+spring.flyway.baselineOnMigrate=true
+
 # enable the desired authentication type
 pvh.security.enable=true
 
