--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,10 +8,11 @@ server.servlet.context-path=/
 
 spring.messages.basename=messages/messages
 logging.level.org.springframework=INFO
-#logging.level.org.springframework=DEBUG
 
+#logging.level.org.springframework=DEBUG
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.jpa.hibernate.ddl-auto=none
 
 spring.flyway.baselineOnMigrate=true
 
