--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -1,23 +1,7 @@
-# active profiles config
-#
-# application use two active profiles
-#
-# one for select repository layer
-# ------------------------------------------------
-# When using HSQL, use: hsqldb
-# When using MySQL, use: mysql
-# When using PostgeSQL, use: postgresql
-# ------------------------------------------------
-#
-# one - for select database
-# ------------------------------------------------
-# When using Spring jpa, use: jpa
-# When using Spring JDBC, use: jdbc
-# When using Spring Data JPA, use: spring-data-jpa
-# ------------------------------------------------
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=MariaDB;DATABASE_TO_LOWER=TRUE
 
-spring.profiles.active=hsqldb,spring-data-jpa
-spring.datasource.url=jdbc:hsqldb:mem:testdb;sql.syntax_mys=true
+# Fill db with initial data using flyway
+spring.flyway.locations=db/migration
 
 # ------------------------------------------------
 
