--- a/docs/package.json
+++ b/docs/package.json
@@ -3,7 +3,9 @@
   "scripts": {
     "dev": "vitepress dev src",
     "build": "vitepress build src",
-    "preview": "vitepress preview src"
+    "preview": "vitepress preview src",
+    "format": "prettier . --write",
+    "format:check": "prettier . --check"
   },
   "packageManager": "yarn@4.12.0",
   "license": "AGPL-3.0-only",
@@ -13,5 +15,8 @@
   },
   "engines": {
     "node": "24.12.0"
+  },
+  "devDependencies": {
+    "prettier": "3.7.4"
   }
 }
