improve backend dockerfile: non-root user, newer layered jar approach

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,32 +1,35 @@
-FROM eclipse-temurin:25.0.1_8-jdk-jammy@sha256:24b66b68453269530b5b4ab688556e489d0a4645bac32d30e11691197aef24c5 AS build
+FROM bellsoft/liberica-openjdk-debian:25.0.1-11 AS build
+WORKDIR /workspace
 
-ENV PORT=5000
-WORKDIR /usr/src/app
 COPY .mvn/ .mvn
 COPY mvnw pom.xml ./
-RUN --mount=type=cache,target=/root/.m2 ./mvnw -Dmaven.repo.local=/root/.m2 dependency:go-offline
+RUN --mount=type=cache,target=/root/.m2 ./mvnw -Dmaven.repo.local=/root/.m2 -B dependency:go-offline
 
-COPY ./src ./src
-RUN --mount=type=cache,target=/root/.m2 ./mvnw -Dmaven.repo.local=/root/.m2 clean install -DskipTests
+COPY src src
+RUN --mount=type=cache,target=/root/.m2 ./mvnw -Dmaven.repo.local=/root/.m2 -B clean install -DskipTests
 
-WORKDIR /usr/src/app/target
-RUN java -Djarmode=layertools -jar ./*.jar extract
+RUN mv /workspace/target/*.jar application.jar
+RUN java -Djarmode=tools -jar application.jar extract --layers --destination /workspace/layers
 
 # PROD IMAGE
-FROM eclipse-temurin:25.0.1_8-jre-alpine@sha256:b51543f89580c1ba70e441cfbc0cfc1635c3c16d2e2d77fec9d890342a3a8687
-RUN apk add dumb-init
+FROM bellsoft/liberica-openjre-alpine:25.0.1-11 AS runtime
+RUN apk add --no-cache dumb-init
+
+RUN addgroup -S app && adduser -S -G app app
+USER app:app
 
 ENV HOST=0.0.0.0
 ENV PORT=5000
 EXPOSE $PORT
 
-WORKDIR /usr/src/app
-COPY --from=build /usr/src/app/target/dependencies/ ./
-COPY --from=build /usr/src/app/target/spring-boot-loader/ ./
-COPY --from=build /usr/src/app/target/snapshot-dependencies/ ./
-COPY --from=build /usr/src/app/target/application/ ./
+WORKDIR /app
+COPY --from=build /workspace/layers/dependencies/ ./
+COPY --from=build /workspace/layers/spring-boot-loader/ ./
+COPY --from=build /workspace/layers/snapshot-dependencies/ ./
+COPY --from=build /workspace/layers/application/ ./
+COPY --from=build /workspace/application.jar ./
 
-HEALTHCHECK --interval=5s --timeout=10s --retries=8 --start-period=20s CMD wget -nv -t1 --spider http://localhost:$PORT/api || exit 1   
+HEALTHCHECK --interval=5s --timeout=10s --retries=8 --start-period=20s CMD wget -nv -t1 --spider http://localhost:$PORT/actuator/health || exit 1
 
 ENTRYPOINT ["/usr/bin/dumb-init", "--"]
-CMD ["java", "org.springframework.boot.loader.launch.JarLauncher", "--spring.profiles.active=prod" ]
+CMD ["java", "-jar", "application.jar", "--spring.profiles.active=prod"]
